force-app/main/default/objects/AI_Response_Mapping_Line__c/AI_Response_Mapping_Line__c.object-meta.xml
<CustomObject>
    <label>AI Response Mapping Line</label>
    <nameField>
        <displayFormat>RML-{0000}</displayFormat>
        <label>Response Mapping Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Response Mapping Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>