force-app/main/default/objects/AI_Response_Mapping_Line__c/fields/AI_Response_Mapping__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Mapping__c</fullName>
    <label>AI Response Mapping</label>
    <referenceTo>AI_Response_Mapping__c</referenceTo>
    <relationshipLabel>AI Response Mapping Lines</relationshipLabel>
    <relationshipName>Response_Mapping_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>