force-app/main/default/objects/AI_Response_Mapping_Line__c/fields/Mapping_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Field_Name__c</fullName>
    <label>Mapping Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>