force-app/main/default/objects/AI_Response_Mapping_Line__c/fields/Security_Audit_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Security_Audit_Field_Name__c</fullName>
    <label>Security Audit Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>